load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "file",
    srcs = ["file.go"],
    importpath = "github.com/example/project/discovery/file",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_fsnotify_fsnotify//:fsnotify",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_grafana_regexp//:regexp",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_prometheus//discovery:go_default_library",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

go_test(
    name = "file_test",
    srcs = ["file_test.go"],
    embed = [":file"],
    deps = [
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_goleak//:goleak",
    ],
)
