load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gce",
    srcs = ["gce.go"],
    importpath = "github.com/example/project/discovery/gce",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_prometheus//discovery:go_default_library",
        "@com_github_prometheus_prometheus//discovery/refresh:go_default_library",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
        "@com_github_prometheus_prometheus//util/strutil:go_default_library",
        "@org_golang_google_api//compute/v1:compute",
        "@org_golang_google_api//option",
        "@org_golang_x_oauth2//google",
    ],
)
