load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "hetzner",
    srcs = [
        "hcloud.go",
        "hetzner.go",
        "robot.go",
    ],
    importpath = "github.com/example/project/discovery/hetzner",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_hetznercloud_hcloud_go//hcloud",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common//version",
        "@com_github_prometheus_prometheus//discovery:go_default_library",
        "@com_github_prometheus_prometheus//discovery/refresh:go_default_library",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
        "@com_github_prometheus_prometheus//util/strutil:go_default_library",
    ],
)

go_test(
    name = "hetzner_test",
    srcs = [
        "hcloud_test.go",
        "mock_test.go",
        "robot_test.go",
    ],
    embed = [":hetzner"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
    ],
)
