load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "http",
    srcs = ["http.go"],
    importpath = "github.com/example/project/discovery/http",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_grafana_regexp//:regexp",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common//version",
        "@com_github_prometheus_prometheus//discovery:go_default_library",
        "@com_github_prometheus_prometheus//discovery/refresh:go_default_library",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
    ],
)

go_test(
    name = "http_test",
    srcs = ["http_test.go"],
    embed = [":http"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_model//go",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
        "@com_github_stretchr_testify//require",
    ],
)
