load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "install",
    srcs = ["install.go"],
    importpath = "github.com/example/project/discovery/install",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_prometheus_prometheus//discovery/aws:go_default_library",
        "@com_github_prometheus_prometheus//discovery/azure:go_default_library",
        "@com_github_prometheus_prometheus//discovery/consul:go_default_library",
        "@com_github_prometheus_prometheus//discovery/digitalocean:go_default_library",
        "@com_github_prometheus_prometheus//discovery/dns:go_default_library",
        "@com_github_prometheus_prometheus//discovery/eureka:go_default_library",
        "@com_github_prometheus_prometheus//discovery/file:go_default_library",
        "@com_github_prometheus_prometheus//discovery/gce:go_default_library",
        "@com_github_prometheus_prometheus//discovery/hetzner:go_default_library",
        "@com_github_prometheus_prometheus//discovery/http:go_default_library",
        "@com_github_prometheus_prometheus//discovery/kubernetes:go_default_library",
        "@com_github_prometheus_prometheus//discovery/linode:go_default_library",
        "@com_github_prometheus_prometheus//discovery/marathon:go_default_library",
        "@com_github_prometheus_prometheus//discovery/moby:go_default_library",
        "@com_github_prometheus_prometheus//discovery/openstack:go_default_library",
        "@com_github_prometheus_prometheus//discovery/puppetdb:go_default_library",
        "@com_github_prometheus_prometheus//discovery/scaleway:go_default_library",
        "@com_github_prometheus_prometheus//discovery/triton:go_default_library",
        "@com_github_prometheus_prometheus//discovery/uyuni:go_default_library",
        "@com_github_prometheus_prometheus//discovery/xds:go_default_library",
        "@com_github_prometheus_prometheus//discovery/zookeeper:go_default_library",
    ],
)
