load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "kubernetes",
    srcs = [
        "client_metrics.go",
        "endpoints.go",
        "endpointslice.go",
        "ingress.go",
        "ingress_adaptor.go",
        "kubernetes.go",
        "node.go",
        "pod.go",
        "service.go",
    ],
    importpath = "github.com/example/project/discovery/kubernetes",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common//version",
        "@com_github_prometheus_prometheus//discovery:go_default_library",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
        "@com_github_prometheus_prometheus//util/strutil:go_default_library",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_api//discovery/v1beta1",
        "@io_k8s_api//networking/v1:networking",
        "@io_k8s_api//networking/v1beta1",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/fields",
        "@io_k8s_apimachinery//pkg/labels",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/util/version",
        "@io_k8s_apimachinery//pkg/watch",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
        "@io_k8s_client_go//tools/cache",
        "@io_k8s_client_go//tools/clientcmd",
        "@io_k8s_client_go//tools/metrics",
        "@io_k8s_client_go//util/workqueue",
    ],
)

go_test(
    name = "kubernetes_test",
    srcs = [
        "endpoints_test.go",
        "endpointslice_test.go",
        "ingress_test.go",
        "kubernetes_test.go",
        "node_test.go",
        "pod_test.go",
        "service_test.go",
    ],
    embed = [":kubernetes"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_prometheus//discovery:go_default_library",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
        "@com_github_prometheus_prometheus//util/testutil:go_default_library",
        "@com_github_stretchr_testify//require",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_api//discovery/v1beta1",
        "@io_k8s_api//networking/v1:networking",
        "@io_k8s_api//networking/v1beta1",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_apimachinery//pkg/version",
        "@io_k8s_client_go//discovery/fake",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//kubernetes/fake",
        "@io_k8s_client_go//tools/cache",
    ],
)
