load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "linode",
    srcs = ["linode.go"],
    importpath = "github.com/example/project/discovery/linode",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_linode_linodego//:linodego",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common//version",
        "@com_github_prometheus_prometheus//discovery:go_default_library",
        "@com_github_prometheus_prometheus//discovery/refresh:go_default_library",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
    ],
)

go_test(
    name = "linode_test",
    srcs = [
        "linode_test.go",
        "mock_test.go",
    ],
    embed = [":linode"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
    ],
)
